Ready to build & deploy war